# Inventory_Agent

./: .env  pyproject.toml
src/inventory/: main.py  todos.py  todos.txt  todos_list.json
